<resources>
    <string name="app_name">Bibliotech</string>

    <string name="selectModeLabel">Welcome!</string>
    <string name="guest">guest</string>
    <string name="DemoModeButtonLabel">My library</string>
    <string name="DevModeButtonLabel">Dev Mode</string>
    <string name="SettingsButtonLabel">Settings</string>

    <string name="fetchScreenTitle">Fetch a book!</string>
    <string name="selectBookButton">Browse books</string>
    <string name="fetchTitleLabel">Title:</string>
    <string name="fetchAuthorLabel">Author:</string>
    <string name="fetchPosLabel">Position:</string>
    <string name="fetchAuthorPlaceholder">Brian Clegg</string>
    <string name="fetchTitlePlaceholder">Big Data How the Information Revolution Is Transforming Our Lives</string>
    <string name="fetchBookListTitle">Select a book</string>
    <string name="fetchBookHelperMessage">Select a book first</string>
    <string name="fetchButtonFindLabel">FIND BOOK</string>

    <string name="progressFindingBook">Looking for book…</string>
    <string name="progressScanningShelf">Scanning shelf…</string>

    <string name="scanFailed">Sorry, the book is no longer in the shelf.</string>
    <string name="scanSuccess">Book found. Retrieving it for you.</string>

    <string name="txtMessage">Message:</string>
    <string name="btnSendMessage">Send Message</string>

    <string name="txtBluetoothConnecting">Connecting</string>
    <string name="txtBluetoothConnected">Connected</string>
    <string name="txtBluetoothDisconnected">Disconnected</string>

    <string name="txtSetSpeed">Motor speed (deg / sec):</string>
    <string name="txtDefaultSpeedValue">0</string>
    <string name="txtSetDuration">Spin duration (ms):</string>
    <string name="txtSetDistance">Distance (mm):</string>
    <string name="txtDefaultDurationValue">0</string>

    <string-array name="output_socket_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string name="socketA">A</string>
    <string name="socketB">B</string>
    <string name="socketC">C</string>
    <string name="socketD">D</string>

    <string name="btnForward">Forward</string>
    <string name="btnBackward">Backward</string>
    <string name="btnStop">STOP</string>
    <string name="checkMoveMode">Dist</string>

    <string name="contentDescription">Not given</string>

    <string name="txtSettingsMacTitle">MAC Address:</string>
    <string name="btnSettingsLoadEV33">Load EV33</string>
    <string name="btnSettingsLoadEV13">Load EV13</string>
    <string name="btnSettingsLoadRPI">Load RPI</string>
    <string name="btnSettingsSave">Save</string>

    <string name="msgSaveSuccessful">Loaded and stored successfully!</string>
    <string name="msgSaveUnsuccessful">Failed to load</string>

    <string name="settingsScanIntervalLabel">Scan interval:</string>
    <string name="settingsScanPlaceholder">Retrieving...</string>
    <string name="btnSettingsUpdateScanInterval">Set interval</string>
    <string name="btnSettingsClearLogs">Clear logs</string>
    <string name="btnSettingsViewLogs">View logs</string>

    <string name="slogan">The future library</string>

</resources>
