<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.luckythirteen.bibliotech.SettingsActivity">


    <TextView
        android:id="@+id/txtBluetoothStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/adam"
        android:text="@string/txtBluetoothDisconnected"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorBluetoothDisconnected"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnReconnect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/contentDescription"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <TextView
        android:id="@+id/txtMacTitle"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/adam"
        android:labelFor="@+id/editMac"
        android:text="@string/txtSettingsMacTitle"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBluetoothStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtMacTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEV33"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/adam"
        android:text="@string/btnSettingsLoadEV33"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMac" />

    <Button
        android:id="@+id/btnEV13"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/adam"
        android:text="@string/btnSettingsLoadEV13"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMac" />

    <Button
        android:id="@+id/btnSetInterval"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/adam"
        android:text="@string/btnSettingsUpdateScanInterval"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInterval" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/adam"
        android:text="@string/btnSettingsSave"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRPI" />

    <Button
        android:id="@+id/btnRPI"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/adam"
        android:text="@string/btnSettingsLoadRPI"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnEV13"
        app:layout_constraintStart_toEndOf="@+id/btnEV33"
        app:layout_constraintTop_toTopOf="@+id/btnEV33" />

    <TextView
        android:id="@+id/txtScanLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adam"
        android:text="@string/settingsScanIntervalLabel"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEV33" />

    <EditText
        android:id="@+id/txtInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/adam"
        android:inputType="textPersonName|number"
        android:text="@string/settingsScanPlaceholder"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtScanLabel"
        app:layout_constraintTop_toBottomOf="@+id/btnEV13" />

</android.support.constraint.ConstraintLayout>
