<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/fetchScreenTitle"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#5c6bc0"
        android:elevation="12dp"
        android:text="@string/fetchButtonFindLabel"
        android:textColor="#ffffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnViewBooks"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#5c6bc0"
        android:elevation="8dp"
        android:text="@string/selectBookButton"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/btnGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/fetchTitleLabel"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:autoSizeMaxTextSize="24dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="casual"
        android:text="@string/fetchTitlePlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTitleLabel"
        app:layout_constraintTop_toTopOf="@+id/txtTitleLabel"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txtAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/fetchAuthorLabel"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/txtTitleLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleLabel" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:autoSizeMaxTextSize="24dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="casual"
        android:text="@string/fetchAuthorPlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="@+id/txtAuthorLabel"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txtSelectHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/fetchBookHelperMessage"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imgArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnViewBooks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />


</android.support.constraint.ConstraintLayout>