<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/fetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/fetchScreenTitle"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:fontFamily="casual"
        android:labelFor="@id/autoTxtTitle"
        android:text="@string/fetchTitleLabel"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/autoTxtTitle"
        style="@android:style/Widget.Material.AutoCompleteTextView"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:text="@string/fetchTitlePlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtAuthor"
        app:layout_constraintStart_toStartOf="@+id/autoTxtAuthor" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:labelFor="@id/autoTxtAuthor"
        android:text="@string/fetchAuthorLabel"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <AutoCompleteTextView
        android:id="@+id/autoTxtAuthor"
        style="@android:style/Widget.Material.AutoCompleteTextView"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="casual"
        android:text="@string/fetchAuthorPlaceholder"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/autoTxtTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="74dp"
        android:layout_height="151dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/autoTxtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch"
        app:srcCompat="@drawable/lego" />

    <Button
        android:id="@+id/btnGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#5c6bc0"
        android:text="@string/fetchButtonLabel"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoTxtAuthor" />


</android.support.constraint.ConstraintLayout>